# research-agent

./: .env.sample  Dockerfile  main.py  pyproject.toml  readme.md  requirements.txt
.adk/artifacts/users/user/sessions/7d5c048d-a1c3-467a-8d06-2d612088272d/artifacts/report_latest.md/versions/0/: metadata.json  report_latest.md
research_pipeline/: agent.py
research_pipeline/agents/: brief_extractor.py  data_agent.py  pipeline.py  research_agent.py  writing_agent.py
research_pipeline/callbacks/: lifecycle.py
research_pipeline/config/: settings.py
research_pipeline/services/: artifacts.py  session.py
research_pipeline/tools/: bigquery_tools.py  search_tools.py
